tests/samples/failing/03.mlang
fn add(a: i32, b: i32) -> i32 {
    $a + b$
}

fn main() {
    // 引数が1つ足りない
    let result = add 10;
}